#77 more spacing fixes

--- a/nutritionLabel.css
+++ b/nutritionLabel.css
@@ -58,8 +58,7 @@
 }
 .nutritionLabel .serving {
 	font-size: 1.1em;
-	 line-height: 1.28em;
-	padding-bottom: 2px;
+	line-height: 1.28em;
 }
 .nutritionLabel .name {
 	font-size: 1.1em;
